# nflreadpy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile.cpu  Dockerfile.gpu  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_form.yml
.github/workflows/: ci-docs.yaml  ci-publish.yaml  ci-test.yaml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
api/cache/: index.html
api/configuration/: index.html
api/load_functions/: index.html
api/utils/: index.html
betting/: CHANGELOG.md  checklist
config/: betting.production.yaml  betting.yaml
config/identifiers/: betting_entities.json
docs/: CONTRIBUTING.md  index.md
docs/api/: betting_dashboard.md  cache.md  configuration.md  load_functions.md  utils.md
docs/betting/: changelog.md  cli.md  compliance.md  configuration.md  dashboard.md  deployment.md  extensibility.md  operations.md  setup.md
docs/guides/: cli.md  configuration.md  dashboards.md  developer-guide.md  extension-points.md  operations.md  setup.md  user-guide.md
scripts/: check_betting_changelog.py  update_betting_changelog.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/LICENSE/: index.html
site/api/cache/: index.html
site/api/configuration/: index.html
site/api/load_functions/: index.html
site/api/utils/: index.html
site/search/: search_index.json
src/nflreadpy/: __init__.py  __init__.pyi  cache.py  config.py  datasets.py  downloader.py  load_combine.py  load_contracts.py  load_depth_charts.py  load_draft_picks.py  load_ffverse.py  load_ftn_charting.py  load_injuries.py  load_nextgen_stats.py  load_officials.py  load_participation.py  load_pbp.py  load_pfr_advstats.py  load_players.py  load_rosters.py  load_rosters_weekly.py  load_schedules.py  load_snap_counts.py  load_stats.py  load_teams.py  load_trades.py  utils_date.py
src/nflreadpy/betting/: __init__.py  alerts.py  analytics.py  backtesting.py  cli.py  compliance.py  configuration.py  dashboard.py  dashboard_core.py  dashboard_tui.py  ingestion.py  logging.py  models.py  normalization.py  quantum.py  scheduler.py  scope_scaling.py  tail.py  utils.py
src/nflreadpy/betting/scrapers/: base.py  common.py  draftkings.py  fanduel.py  mock.py  pinnacle.py
src/nflreadpy/betting/web/: __init__.py  api.py  app.py
src/nflreadpy/data/: player_name_mapping.parquet  team_abbr_mapping.parquet  team_abbr_mapping_norelocate.parquet
tests/: __init__.py  test_cache.py  test_config.py  test_integration.py  test_utils_date.py
tests/betting/: conftest.py  test_alert_sinks.py  test_backtesting.py  test_backtesting_scheduler.py  test_betting_stack.py  test_cli_commands.py  test_compliance.py  test_configuration.py  test_dashboard.py  test_dashboard_core.py  test_dashboard_hotkeys.py  test_dashboard_interfaces.py  test_ingestion_logging.py  test_models_probabilistic.py  test_normalization_and_portfolio.py  test_property_ingestion.py  test_property_models.py  test_quantum.py  test_quantum_comparison.py  test_scheduler_and_alerts.py  test_scraper_integration.py  test_scrapers_regression.py  test_tail_probabilities.py  test_web_api.py
tests/betting/data/: historical_snapshots.csv
tests/betting/payloads/: draftkings.json  fanduel.json  pinnacle.json
