[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "nflreadpy"
version = "0.1.4"
description = "A Python package for downloading NFL data from nflverse repositories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Tan Ho", email = "nflverse@tanho.ca"},
]
keywords = ["nfl", "football", "sports", "data", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "polars>=0.20.0",
    "platformdirs>=3.0.0",
    "tqdm>=4.64.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=1.5.0",
]
betting = [
    "streamlit>=1.35.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.32.4.20250809",
    "types-tqdm>=4.67.0.20250809",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
nflreadpy-betting = "nflreadpy.betting.cli:main"
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.32.4.20250809",
    "types-tqdm>=4.67.0.20250809",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/nflverse/nflreadpy"
Repository = "https://github.com/nflverse/nflreadpy"
Documentation = "https://nflreadpy.nflverse.com"
Issues = "https://github.com/nflverse/nflreadpy/issues"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "nflreadpy.betting.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "nflreadpy.betting.models"
follow_imports = "normal"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark tests that require the asyncio event loop",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.nflreadpy.alerts]
enabled = false
slack_webhook = ""
email_sender = "alerts@example.com"
email_recipients = ["ops@example.com"]
sms_numbers = []
jitter_seconds = 0.0
